update(application.properties): Update db uri

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=SuperAndesNoSQL
+spring.data.mongodb.uri=mongodb+srv://yandrade1:Fifa2025..@uniandes.bybrt.mongodb.net/SuperAndesNoSQL?retryWrites=true&w=majority
+logging.level.org.springframework.data.mongodb=DEBUG
+logging.level.org.mongodb.driver=DEBUG
