--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=SuperAndesNoSQL
 spring.data.mongodb.uri=mongodb+srv://yandrade1:Fifa2025..@uniandes.bybrt.mongodb.net/SuperAndesNoSQL?retryWrites=true&w=majority
 logging.level.org.springframework.data.mongodb=DEBUG
 logging.level.org.mongodb.driver=DEBUG
+spring.data.mongodb.auto-index-creation=true
